<resources>
    <string name="app_name" translatable="false">Freelancehunt</string>
    <string name="token_hint" translatable="false">Api Token</string>
    <string name="url" translatable="false">https://hombre.tech</string>
    <string name="github_url" translatable="false">https://github.com/HombreTech/FreelanceHunt</string>
    <string name="email" translatable="false">ilyakokhan@gmail.com</string>
    <string name="no_internet_error_message">No Internet connection available. Please try again</string>
    <string name="internet_error_message">Request error</string>
    <string name="token_is_empty">Enter Token</string>
    <string name="new_project">New project</string>
    <string name="unknown">-</string>
    <string name="new_work">Job offer</string>
    <string name="new_forum_message">Discussion</string>
    <string name="type_project">(.*?added project)</string>
    <string name="type_project_1">(.*?added a project)</string>
    <string name="type_like_message">(.*?like your)</string>
    <string name="type_appreciated">(.*?appreciated)</string>
    <string name="type_work">(.*?offers project work)</string>
    <string name="type_add_message">(.*?add message)</string>
    <string name="type_add_message_1">(.*?added message)</string>
    <string name="type_add_message_2" translatable="false">(.*?added a message)</string>
    <string name="type_new_vacancy">(.*?A job is open)</string>
    <string name="premium">Premium</string>
    <string name="safe">Safe</string>
    <string name="remote">Remote</string>
    <string name="contests">Contests</string>
    <string name="projects">Projects</string>
    <string name="feed">Feed</string>
    <string name="applications">applications</string>
    <string name="isfinal">Final</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="employers">Employers</string>
    <string name="freelancers">Freelancers</string>
    <string name="my_profile">My profile</string>
    <string name="profile_view">View profile</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="verified">Verified</string>
    <string name="threads">Messages</string>
    <string name="my_bids">My bids</string>
    <string name="my_contests">Мои конкурсы</string>
    <string name="for_plus">For Plus profile</string>
    <string name="is_plus">Plus profile</string>
    <string name="isreaded">Readed</string>
    <string name="isunreaded">Unread</string>
    <string name="yesterday">yesterday</string>
    <string name="just_now">just now</string>
    <string name="on_freelance">on service&#160;</string>
    <string name="verification_data">Verified data</string>
    <string name="passport_data">Passport</string>
    <string name="names">Name</string>
    <string name="birth">Birth</string>
    <string name="card">Card</string>
    <string name="photo">Photo</string>
    <string name="phone">Phone</string>
    <string name="BankID">BankID</string>
    <string name="country">Country</string>
    <string name="site">Site</string>
    <string name="freelancer">Freelancer</string>
    <string name="summary">Summary</string>
    <string name="skills">Skills</string>
    <string name="share">Share</string>
    <string name="message">Message</string>
    <string name="vacancy">Vacancy</string>
    <string name="thread_view">View dialog</string>
    <string name="type_here">Start writing a message…</string>
    <string name="employer_view">Employer profile</string>
    <string name="project_view">View project</string>
    <string name="project_state11">Open for proposals</string>
    <string name="project_state24">Approval of Terms</string>
    <string name="project_state12">Pending payment reservation</string>
    <string name="project_state14">Project ongoing</string>
    <string name="project_state21">Feedback sharing</string>
    <string name="reviews">Reviews</string>
    <string name="contest_view">View contest</string>
    <string name="status_title">Status</string>
    <string name="safe_type_1">Direct payment</string>
    <string name="safe_type_2">Safe by employer</string>
    <string name="safe_type_3">Safe by freelancer</string>
    <string name="safe_type_4">Safe in halves</string>
    <string name="safe_type_5">Business Safe</string>
    <string name="budget_nan">Budget not set</string>
    <string name="other">Other</string>
    <string name="bid_is_hidden">Bid hidden by freelancer</string>
    <string name="only_for_plus">Only for Plus</string>
    <string name="winner">Winner</string>
    <string name="employer">Employer</string>
    <string name="description">Description</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="no_information">No information</string>
    <string name="login_hint">To enter the application, type token received at\nhttps://freelancehunt.com/my/api</string>
    <string name="signin">Sign in</string>
    <string name="have_messages">Have a new messages</string>
    <string name="not_have_messages">0 new messages</string>
    <string name="press_again_to_exit">Press again to close</string>
    <string name="main">Home</string>
    <string name="notify_new_feed">New feed event</string>
    <string name="notify_new_message">You have new %s</string>
    <string name="notify_new_projects">New projects: %d</string>
    <string name="pref_notification_title">Notifications</string>
    <string name="pref_notifications_feed">New feed events</string>
    <string name="pref_notifications_messages">New messages</string>
    <string name="pref_notifications_projects">New projects</string>
    <string name="pref_notifications_projects_summary">Checking for new projects, according to the saved filter</string>
    <string name="pref_notifications_interval">Refresh interval</string>
    <string name="pref_notifications_interval_default" translatable="false">60</string>
    <string name="pref_notification_wifi_summary">Check for updates only when connected to WIFI</string>
    <string name="pref_notifications_wifi">Only WIFI</string>
    <string name="check_inputs">Error. Check your entries.</string>
    <string name="init_error">Initialization Error</string>
    <string name="add">Add</string>
    <string name="hide_bid">Hide bid</string>
    <string name="comment_hint">Contact information inside bid not allowed</string>
    <string name="comment">Comment</string>
    <string name="days_bid">Days</string>
    <string name="cost">Cost</string>
    <string name="new_bid">New bid</string>
    <string name="bit_a_bid">Add bid</string>
    <string name="safe_cost_minimal">Minimum safe budget should be at least 200₴ or 600₽</string>
    <string name="bid_comment_min">The minimum bid length must be at least 60 characters.</string>
    <string name="project_description_min">The minimum description length must be at least 60 characters.</string>
    <string name="bid_add_success">Bid was added</string>
    <string name="revoke">Revoke</string>
    <string name="restore">Restore</string>
    <string name="reject">Reject</string>
    <string name="choose">Choose freelancer</string>
    <string name="project_non_bids">Project closed for bids</string>
    <string name="bid_active">Active</string>
    <string name="bid_revoked">Revoked</string>
    <string name="bid_rejected">Rejected</string>
    <string name="choose_bid">Choose freelancer</string>
    <string name="choose_comment_hint">You can write a message, thus informing the freelancer that his bid won</string>
    <string name="not_have_action">No actions</string>
    <string name="about">About</string>
    <string name="create_thread">Private message</string>
    <string name="thread">Subject</string>
    <string name="send">Send</string>
    <string name="message_sent">Message sent</string>
    <string name="send_with">Open…</string>
    <string name="send_email">Send email</string>
    <string name="open">Open…</string>
    <string name="freelancer_view">Freelancer profile</string>
    <string name="copyright">© Kokhan Ilya, 2021</string>
    <string name="madeinchina">Made in Belarus</string>
    <string name="comment_is_deleted">Comment was deleted</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="freelancehunt_premium" translatable="false">Freelancehunt Premium</string>
    <string name="premium_unlock_caption">The ability to check for updates more than once per two hour is available in the Premium version of the application. By paying Premium, you will unlock the limit, and most importantly, support me as a developer.\nGo to the purchase dialog?</string>
    <string name="premium_caption">By paying Premium, you will unlock the restriction of checking for updates more often than once an hour, and most importantly, you will support me as a developer.\nGo to the purchase dialog?</string>
    <string name="billing_not_ready">Not available on your device</string>
    <string name="pref_app_title">Application</string>
    <string name="pref_language">Language</string>
    <string name="pref_language_default" translatable="false">ru</string>
    <string name="about_project">About</string>
    <string name="bids">Bids</string>
    <string name="about_contest">About</string>
    <string name="comments">Comments</string>
    <string name="pref_theme_default" translatable="false">light</string>
    <string name="pref_theme">Theme</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="web" translatable="false">Web</string>
    <string name="email_" translatable="false">Email</string>
    <string name="github" translatable="false">Github</string>
    <string name="my_projects">My projects</string>
    <string name="my_workspaces">Workspaces</string>
    <string name="confirmed">Confirmed</string>
    <string name="not_confirmed">Not Confirmed</string>
    <string name="confirm">Confirm conditions</string>
    <string name="propose_conditions">Propose conditions</string>
    <string name="reject_conditions">Reject conditions</string>
    <string name="extend_project">Extend project</string>
    <string name="request_arbitrage">Request arbitrage</string>
    <string name="close_project_completed">Close project as completed</string>
    <string name="close_project_incompleted">Close project as incompleted</string>
    <string name="close_project">Close project</string>
    <string name="close_project_without_review">Close project without review</string>
    <string name="project_write_review">Write a response review</string>
    <string name="new_conditions">New conditions</string>
    <string name="propose_comment_min">Propose comment must be not empty</string>
    <string name="close_project_comment_hint">The closing comment will be publicly available, but will not be taken into account when calculating the freelancer rating</string>
    <string name="request_arbitrage_comment_hint">Try to clearly and concretely state the essence of the claim, pointing out the real facts that can be verified by correspondence and investments in the work area</string>
    <string name="close">Close</string>
    <string name="project_ended">Complete</string>
    <string name="complete_project_review">Review for freelancer</string>
    <string name="review_project_review">Review for employer</string>
    <string name="propose">Propose</string>
    <string name="go_to_mailbox">Go to mailbox</string>
    <string name="submit">Submit</string>
    <string name="offer_job">Offer a job</string>
    <string name="project_title">Project title</string>
    <string name="project_description">Description</string>
    <string name="categories">Categories</string>
    <string name="select">Select</string>
    <string name="project_filter">Projects filter</string>
    <string name="is_only_my_skills">Only my skills</string>
    <string name="apply">Apply</string>
</resources>