<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="pref_key_app_settings"
        android:title="@string/pref_app_title">

        <ListPreference
            app:icon="@drawable/lang"
            android:defaultValue="@string/pref_language_default"
            android:dialogTitle="@string/pref_language"
            android:entries="@array/pref_language_entries"
            android:entryValues="@array/pref_language_values"
            android:key="KEY_APP_LANGUAGE"
            android:summary="%s"
            android:title="@string/pref_language" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_notification_settings"
        android:title="@string/pref_notification_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="KEY_WORKER_FEED"
            android:title="@string/pref_notifications_feed"
            app:icon="@drawable/feed_small" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="KEY_WORKER_MESSAGES"
            android:title="@string/pref_notifications_messages"
            app:icon="@drawable/messages" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="KEY_WORKER_UNMETERED"
            android:summary="@string/pref_notification_wifi_summary"
            android:title="@string/pref_notifications_wifi"
            app:icon="@drawable/wifi" />
        <ListPreference
            android:defaultValue="@string/pref_notifications_interval_default"
            android:dialogTitle="@string/pref_notifications_interval"
            android:entries="@array/pref_notifications_period_entries"
            android:entryValues="@array/pref_notifications_interval_values"
            android:key="KEY_WORKER_INTERVAL"
            android:summary="%s"
            android:title="@string/pref_notifications_interval" />
    </PreferenceCategory>
</PreferenceScreen>