<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/padding_standart">

    <TextView
        android:id="@+id/createThreadTitle"
        style="@style/TextStyle.Heading.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_middle"
        android:layout_marginTop="@dimen/padding_standart"
        android:layout_marginEnd="@dimen/padding_middle"
        android:drawableStart="@drawable/new_mail"
        android:drawablePadding="@dimen/padding_middle"
        android:gravity="center_vertical"
        android:text="@string/create_thread"
        android:textAllCaps="true"
        android:textColor="?android:textColorPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <tech.hombre.freelancehunt.common.widgets.EditorEditText
        android:id="@+id/subject"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/padding_standart"
        android:hint="@string/thread"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:textAppearance="@style/TextStyle.Chat.Text"
        app:layout_constraintEnd_toEndOf="@id/createThreadTitle"
        app:layout_constraintStart_toStartOf="@id/createThreadTitle"
        app:layout_constraintTop_toBottomOf="@id/createThreadTitle" />

    <tech.hombre.freelancehunt.common.widgets.EditorEditText
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:hint="@string/type_here"
        android:lines="4"
        android:paddingTop="0dp"
        android:textAppearance="@style/TextStyle.Chat.Text"
        app:layout_constraintEnd_toEndOf="@id/createThreadTitle"
        app:layout_constraintStart_toStartOf="@id/createThreadTitle"
        app:layout_constraintTop_toBottomOf="@id/subject" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCreateThread"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:icon="@drawable/send"
        app:iconPadding="@dimen/padding_middle"
        app:layout_constraintEnd_toEndOf="@id/createThreadTitle"
        app:layout_constraintTop_toBottomOf="@id/message" />

</androidx.constraintlayout.widget.ConstraintLayout>