<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/padding_standart">

    <TextView
        android:id="@+id/chooseBidTitle"
        style="@style/TextStyle.Heading.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_middle"
        android:layout_marginTop="@dimen/padding_standart"
        android:layout_marginEnd="@dimen/padding_middle"
        android:drawableStart="@drawable/bid"
        android:drawablePadding="@dimen/padding_middle"
        android:text="@string/choose_bid"
        android:textAllCaps="true"
        android:textColor="?textColorSecondary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/commentTitle"
        style="@style/TextStyle.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_standart"
        android:text="@string/comment"
        android:textColor="?textColorSecondary"
        app:layout_constraintEnd_toEndOf="@id/chooseBidTitle"
        app:layout_constraintStart_toStartOf="@id/chooseBidTitle"
        app:layout_constraintTop_toBottomOf="@id/chooseBidTitle" />

    <tech.hombre.freelancehunt.common.widgets.EditorEditText
        android:id="@+id/comment"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:hint="@string/choose_comment_hint"
        android:lines="3"
        android:paddingTop="0dp"
        android:textAppearance="@style/TextStyle.Chat.Text"
        android:textColor="?textColorSecondary"
        android:textColorHint="?textColorSecondary"
        app:layout_constraintEnd_toEndOf="@id/chooseBidTitle"
        app:layout_constraintStart_toStartOf="@id/chooseBidTitle"
        app:layout_constraintTop_toBottomOf="@id/commentTitle" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonChooseBid"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:textColor="?iconColor"
        app:icon="@drawable/bid"
        app:iconPadding="@dimen/padding_middle"
        app:iconTint="?iconColor"
        app:layout_constraintEnd_toEndOf="@id/chooseBidTitle"
        app:layout_constraintTop_toBottomOf="@id/comment" />

</androidx.constraintlayout.widget.ConstraintLayout>