<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/padding_standart">

    <TextView
        android:id="@+id/projectFilterTitle"
        style="@style/TextStyle.Heading.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_middle"
        android:layout_marginTop="@dimen/padding_standart"
        android:layout_marginEnd="@dimen/padding_middle"
        android:drawableStart="@drawable/bid"
        android:drawablePadding="@dimen/padding_middle"
        android:text="@string/project_filter"
        android:textAllCaps="true"
        android:textColor="?textColorSecondary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/params"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_middle"
        android:stretchColumns="2"
        app:layout_constraintEnd_toEndOf="@id/projectFilterTitle"
        app:layout_constraintStart_toStartOf="@id/projectFilterTitle"
        app:layout_constraintTop_toBottomOf="@id/projectFilterTitle">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_middle"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/skillsTitle"
                style="@style/TextStyle.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="end"
                android:paddingEnd="@dimen/padding_middle"
                android:text="@string/categories"
                android:textColor="?textColorSecondary" />

            <TextView
                android:id="@+id/skillsList"
                style="@style/spinnerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/spinner"
                android:clickable="true"
                android:ellipsize="end"
                android:focusable="true"
                android:maxLines="3"
                android:paddingStart="@dimen/padding_middle"
                android:text="@string/select" />
        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_middle"
        app:constraint_referenced_ids="isForPlus,isOnlyMySkills"
        app:flow_horizontalBias="0"
        app:flow_horizontalGap="@dimen/padding_small"
        app:flow_horizontalStyle="spread"
        app:flow_verticalBias="0"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="@id/params"
        app:layout_constraintStart_toStartOf="@id/params"
        app:layout_constraintTop_toBottomOf="@id/params" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/isForPlus"
        style="@style/TextStyle.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_weight="0"
        android:gravity="end|center_vertical"
        android:text="@string/for_plus"
        android:textColor="?textColorSecondary"
        app:buttonTint="?colorPrimary" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/isOnlyMySkills"
        style="@style/TextStyle.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_weight="0"
        android:gravity="end|center_vertical"
        android:text="@string/is_only_my_skills"
        android:textColor="?textColorSecondary"
        app:buttonTint="?colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSubmit"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:textColor="?iconColor"
        app:icon="@drawable/check"
        app:iconPadding="@dimen/padding_middle"
        app:iconTint="?iconColor"
        app:layout_constraintEnd_toEndOf="@id/projectFilterTitle"
        app:layout_constraintTop_toBottomOf="@id/isOnlyMySkills" />

</androidx.constraintlayout.widget.ConstraintLayout>